Lab3.0/Code/syntax.output
Terminals unused in grammar

    AUTO
    BREAK
    CASE
    CHAR
    CONST
    CONTINUE
    DEFAULT
    DO
    DOUBLE
    ENUM
    EXTERN
    FOR
    GOTO
    LONG
    REGISTER
    SHORT
    SIGNED
    SIZEOF
    STATIC
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VOID
    VOLATILE
    MOD


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: INT
   12          | FLOAT
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | ε

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT_CONST RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | ε

   29 Stmt: MatchedStmt
   30     | UnmatchedStmt

   31 MatchedStmt: Exp SEMI
   32            | CompSt
   33            | RETURN Exp SEMI
   34            | WHILE LP Exp RP MatchedStmt
   35            | IF LP Exp RP MatchedStmt ELSE MatchedStmt
   36            | error SEMI

   37 UnmatchedStmt: IF LP Exp RP Stmt
   38              | IF LP Exp RP MatchedStmt ELSE UnmatchedStmt
   39              | IF LP Exp RP error ELSE Stmt

   40 DefList: Def DefList
   41        | ε

   42 Def: Specifier DecList SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp LT Exp
   51    | Exp LE Exp
   52    | Exp GT Exp
   53    | Exp GE Exp
   54    | Exp EQ Exp
   55    | Exp NE Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID
   64    | INT_CONST
   65    | FLOAT_CONST
   66    | STRING
   67    | ID LP Args RP
   68    | ID LP RP
   69    | Exp LB Exp RB
   70    | Exp LB error RB
   71    | Exp DOT ID

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 36 39 70
    AUTO (258)
    BREAK (259)
    CASE (260)
    CHAR (261)
    CONST (262)
    CONTINUE (263)
    DEFAULT (264)
    DO (265)
    DOUBLE (266)
    ELSE (267) 35 38 39
    ENUM (268)
    EXTERN (269)
    FLOAT (270) 12
    FOR (271)
    GOTO (272)
    IF (273) 35 37 38 39
    INT (274) 11
    LONG (275)
    REGISTER (276)
    RETURN (277) 33
    SHORT (278)
    SIGNED (279)
    SIZEOF (280)
    STATIC (281)
    STRUCT (282) 14 15
    SWITCH (283)
    TYPEDEF (284)
    UNION (285)
    UNSIGNED (286)
    VOID (287)
    VOLATILE (288)
    WHILE (289) 34
    ID <node> (290) 16 18 19 21 22 63 67 68 71
    INT_CONST <node> (291) 20 64
    FLOAT_CONST <node> (292) 65
    STRING <node> (293) 66
    PLUS (294) 56
    MINUS (295) 57 61
    STAR (296) 58
    DIV (297) 59
    MOD (298)
    LT (299) 50
    LE (300) 51
    GT (301) 52
    GE (302) 53
    EQ (303) 54
    NE (304) 55
    AND (305) 48
    OR (306) 49
    NOT (307) 62
    ASSIGNOP (308) 46 47
    LP (309) 21 22 34 35 37 38 39 60 67 68
    RP (310) 21 22 34 35 37 38 39 60 67 68
    LB (311) 20 69 70
    RB (312) 20 69 70
    LC (313) 14 26
    RC (314) 14 26
    COMMA (315) 10 23 44 72
    SEMI (316) 4 5 7 8 31 33 36 42
    DOT (317) 71
    LOWER_THAN_ELSE (318)


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Program <node> (65)
        on left: 1
        on right: 0
    ExtDefList <node> (66)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (67)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (68)
        on left: 9 10
        on right: 4 10
    Specifier <node> (69)
        on left: 11 12 13
        on right: 4 5 6 7 25 42
    StructSpecifier <node> (70)
        on left: 14 15
        on right: 13
    OptTag <node> (71)
        on left: 16 17
        on right: 14
    Tag <node> (72)
        on left: 18
        on right: 15
    VarDec <node> (73)
        on left: 19 20
        on right: 9 10 20 25 45 46
    FunDec <node> (74)
        on left: 21 22
        on right: 6 7
    VarList <node> (75)
        on left: 23 24
        on right: 21 23
    ParamDec <node> (76)
        on left: 25
        on right: 23 24
    CompSt <node> (77)
        on left: 26
        on right: 6 32
    StmtList <node> (78)
        on left: 27 28
        on right: 26 27
    Stmt <node> (79)
        on left: 29 30
        on right: 27 37 39
    MatchedStmt <node> (80)
        on left: 31 32 33 34 35 36
        on right: 29 34 35 38
    UnmatchedStmt <node> (81)
        on left: 37 38 39
        on right: 30 38
    DefList <node> (82)
        on left: 40 41
        on right: 14 26 40
    Def <node> (83)
        on left: 42
        on right: 40
    DecList <node> (84)
        on left: 43 44
        on right: 42 44
    Dec <node> (85)
        on left: 45 46
        on right: 43 44
    Exp <node> (86)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 31 33 34 35 37 38 39 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 69 70 71 72 73
    Args <node> (87)
        on left: 72 73
        on right: 67 72


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 5
    ExtDefList       go to state 6
    ExtDef           go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9


State 1

    8 ExtDef: error • SEMI

    SEMI  shift, and go to state 10


State 2

   12 Specifier: FLOAT •

    $default  reduce using rule 12 (Specifier)


State 3

   11 Specifier: INT •

    $default  reduce using rule 11 (Specifier)


State 4

   14 StructSpecifier: STRUCT • OptTag LC DefList RC
   15                | STRUCT • Tag

    ID  shift, and go to state 11

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 6

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 7

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9


State 8

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI

    ID    shift, and go to state 16
    SEMI  shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 9

   13 Specifier: StructSpecifier •

    $default  reduce using rule 13 (Specifier)


State 10

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 11

   16 OptTag: ID •
   18 Tag: ID •

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 21


State 13

   15 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 15 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

   19 VarDec: ID •
   21 FunDec: ID • LP VarList RP
   22       | ID • LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 23


State 19

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   20 VarDec: VarDec • LB INT_CONST RB

    LB     shift, and go to state 24
    COMMA  shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    LC    shift, and go to state 26
    SEMI  shift, and go to state 27

    CompSt  go to state 28


State 21

   14 StructSpecifier: STRUCT OptTag LC • DefList RC

    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 9
    DefList          go to state 30
    Def              go to state 31


State 22

   21 FunDec: ID LP • VarList RP
   22       | ID LP • RP

    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 9
    VarList          go to state 34
    ParamDec         go to state 35


State 23

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 24

   20 VarDec: VarDec LB • INT_CONST RB

    INT_CONST  shift, and go to state 36


State 25

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   26 CompSt: LC • DefList StmtList RC

    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 9
    DefList          go to state 39
    Def              go to state 31


State 27

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 28

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 29

   42 Def: Specifier • DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 30

   14 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 43


State 31

   40 DefList: Def • DefList

    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 9
    DefList          go to state 44
    Def              go to state 31


State 32

   22 FunDec: ID LP RP •

    $default  reduce using rule 22 (FunDec)


State 33

   25 ParamDec: Specifier • VarDec

    ID  shift, and go to state 37

    VarDec  go to state 45


State 34

   21 FunDec: ID LP VarList • RP

    RP  shift, and go to state 46


State 35

   23 VarList: ParamDec • COMMA VarList
   24        | ParamDec •

    COMMA  shift, and go to state 47

    $default  reduce using rule 24 (VarList)


State 36

   20 VarDec: VarDec LB INT_CONST • RB

    RB  shift, and go to state 48


State 37

   19 VarDec: ID •

    $default  reduce using rule 19 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 39

   26 CompSt: LC DefList • StmtList RC

    error        shift, and go to state 49
    IF           shift, and go to state 50
    RETURN       shift, and go to state 51
    WHILE        shift, and go to state 52
    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59
    LC           shift, and go to state 26

    RC  reduce using rule 28 (StmtList)

    CompSt         go to state 60
    StmtList       go to state 61
    Stmt           go to state 62
    MatchedStmt    go to state 63
    UnmatchedStmt  go to state 64
    Exp            go to state 65


State 40

   20 VarDec: VarDec • LB INT_CONST RB
   45 Dec: VarDec •
   46    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 24

    $default  reduce using rule 45 (Dec)


State 41

   42 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 67


State 42

   43 DecList: Dec •
   44        | Dec • COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 43 (DecList)


State 43

   14 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 14 (StructSpecifier)


State 44

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 45

   20 VarDec: VarDec • LB INT_CONST RB
   25 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 25 (ParamDec)


State 46

   21 FunDec: ID LP VarList RP •

    $default  reduce using rule 21 (FunDec)


State 47

   23 VarList: ParamDec COMMA • VarList

    FLOAT   shift, and go to state 2
    INT     shift, and go to state 3
    STRUCT  shift, and go to state 4

    Specifier        go to state 33
    StructSpecifier  go to state 9
    VarList          go to state 69
    ParamDec         go to state 35


State 48

   20 VarDec: VarDec LB INT_CONST RB •

    $default  reduce using rule 20 (VarDec)


State 49

   36 MatchedStmt: error • SEMI

    SEMI  shift, and go to state 70


State 50

   35 MatchedStmt: IF • LP Exp RP MatchedStmt ELSE MatchedStmt
   37 UnmatchedStmt: IF • LP Exp RP Stmt
   38              | IF • LP Exp RP MatchedStmt ELSE UnmatchedStmt
   39              | IF • LP Exp RP error ELSE Stmt

    LP  shift, and go to state 71


State 51

   33 MatchedStmt: RETURN • Exp SEMI

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 72


State 52

   34 MatchedStmt: WHILE • LP Exp RP MatchedStmt

    LP  shift, and go to state 73


State 53

   63 Exp: ID •
   67    | ID • LP Args RP
   68    | ID • LP RP

    LP  shift, and go to state 74

    $default  reduce using rule 63 (Exp)


State 54

   64 Exp: INT_CONST •

    $default  reduce using rule 64 (Exp)


State 55

   65 Exp: FLOAT_CONST •

    $default  reduce using rule 65 (Exp)


State 56

   66 Exp: STRING •

    $default  reduce using rule 66 (Exp)


State 57

   61 Exp: MINUS • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 75


State 58

   62 Exp: NOT • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 76


State 59

   60 Exp: LP • Exp RP

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 77


State 60

   32 MatchedStmt: CompSt •

    $default  reduce using rule 32 (MatchedStmt)


State 61

   26 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 78


State 62

   27 StmtList: Stmt • StmtList

    error        shift, and go to state 49
    IF           shift, and go to state 50
    RETURN       shift, and go to state 51
    WHILE        shift, and go to state 52
    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59
    LC           shift, and go to state 26

    RC  reduce using rule 28 (StmtList)

    CompSt         go to state 60
    StmtList       go to state 79
    Stmt           go to state 62
    MatchedStmt    go to state 63
    UnmatchedStmt  go to state 64
    Exp            go to state 65


State 63

   29 Stmt: MatchedStmt •

    $default  reduce using rule 29 (Stmt)


State 64

   30 Stmt: UnmatchedStmt •

    $default  reduce using rule 30 (Stmt)


State 65

   31 MatchedStmt: Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    LT        shift, and go to state 84
    LE        shift, and go to state 85
    GT        shift, and go to state 86
    GE        shift, and go to state 87
    EQ        shift, and go to state 88
    NE        shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 94
    DOT       shift, and go to state 95


State 66

   46 Dec: VarDec ASSIGNOP • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 96


State 67

   42 Def: Specifier DecList SEMI •

    $default  reduce using rule 42 (Def)


State 68

   44 DecList: Dec COMMA • DecList

    ID  shift, and go to state 37

    VarDec   go to state 40
    DecList  go to state 97
    Dec      go to state 42


State 69

   23 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 23 (VarList)


State 70

   36 MatchedStmt: error SEMI •

    $default  reduce using rule 36 (MatchedStmt)


State 71

   35 MatchedStmt: IF LP • Exp RP MatchedStmt ELSE MatchedStmt
   37 UnmatchedStmt: IF LP • Exp RP Stmt
   38              | IF LP • Exp RP MatchedStmt ELSE UnmatchedStmt
   39              | IF LP • Exp RP error ELSE Stmt

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 98


State 72

   33 MatchedStmt: RETURN Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    LT        shift, and go to state 84
    LE        shift, and go to state 85
    GT        shift, and go to state 86
    GE        shift, and go to state 87
    EQ        shift, and go to state 88
    NE        shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 99
    DOT       shift, and go to state 95


State 73

   34 MatchedStmt: WHILE LP • Exp RP MatchedStmt

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 100


State 74

   67 Exp: ID LP • Args RP
   68    | ID LP • RP

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59
    RP           shift, and go to state 101

    Exp   go to state 102
    Args  go to state 103


State 75

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   61    | MINUS Exp •
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID

    LB   shift, and go to state 93
    DOT  shift, and go to state 95

    $default  reduce using rule 61 (Exp)


State 76

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   62    | NOT Exp •
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID

    LB   shift, and go to state 93
    DOT  shift, and go to state 95

    $default  reduce using rule 62 (Exp)


State 77

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   60    | LP Exp • RP
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    LT        shift, and go to state 84
    LE        shift, and go to state 85
    GT        shift, and go to state 86
    GE        shift, and go to state 87
    EQ        shift, and go to state 88
    NE        shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RP        shift, and go to state 104
    LB        shift, and go to state 93
    DOT       shift, and go to state 95


State 78

   26 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 26 (CompSt)


State 79

   27 StmtList: Stmt StmtList •

    $default  reduce using rule 27 (StmtList)


State 80

   56 Exp: Exp PLUS • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 105


State 81

   57 Exp: Exp MINUS • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 106


State 82

   58 Exp: Exp STAR • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 107


State 83

   59 Exp: Exp DIV • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 108


State 84

   50 Exp: Exp LT • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 109


State 85

   51 Exp: Exp LE • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 110


State 86

   52 Exp: Exp GT • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 111


State 87

   53 Exp: Exp GE • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 112


State 88

   54 Exp: Exp EQ • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 113


State 89

   55 Exp: Exp NE • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 114


State 90

   48 Exp: Exp AND • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 115


State 91

   49 Exp: Exp OR • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 116


State 92

   47 Exp: Exp ASSIGNOP • Exp

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 117


State 93

   69 Exp: Exp LB • Exp RB
   70    | Exp LB • error RB

    error        shift, and go to state 118
    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    STRING       shift, and go to state 56
    MINUS        shift, and go to state 57
    NOT          shift, and go to state 58
    LP           shift, and go to state 59

    Exp  go to state 119


State 94

   31 MatchedStmt: Exp SEMI •

    $default  reduce using rule 31 (MatchedStmt)


State 95

   71 Exp: Exp DOT • ID

    ID  shift, and go to state 120


State 96

   46 Dec: VarDec ASSIGNOP Exp •
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    LT        shift, and go to state 84
    LE        shift, and go to state 85
    GT        shift, and go to state 86
    GE        shift, and go to state 87
    EQ        shift, and go to state 88
    NE        shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    LB        shift, and go to state 93
    DOT       shift, and go to state 95

    $default  reduce using rule 46 (Dec)


State 97

   44 DecList: Dec COMMA DecList •

    $default  reduce using rule 44 (DecList)


State 98

   35 MatchedStmt: IF LP Exp • RP MatchedStmt ELSE MatchedStmt
   37 UnmatchedStmt: IF LP Exp • RP Stmt
   38              | IF LP Exp • RP MatchedStmt ELSE UnmatchedStmt
   39              | IF LP Exp • RP error ELSE Stmt
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • LT Exp
   51    | Exp • LE Exp
   52    | Exp • GT Exp
   53    | Exp • GE Exp
   54    | Exp • EQ Exp
   55    | Exp • NE Exp
   56    | Exp • PLUS Exp
   57    | Exp • MINUS Exp
   58    | Exp • STAR Exp
   59    | Exp • DIV Exp
   69    | Exp • LB Exp RB
   70    | Exp • LB error RB
   71    | Exp • DOT ID
